welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: identifier expected but 'final' found.
  def final(){
      ^SnakeBuggle:18: error: ')' expected but ';' found.
      else(droite();avance();droite();)
                   ^SnakeBuggle:18: error: illegal start of statement
      else(droite();avance();droite();)
                                      ^SnakeBuggle:24: error: illegal start of simple expression
  while(final()){serpent()}
        ^SnakeBuggle:27: error: ')' expected but '}' found.
} 
^